# kri-local-rag

./: .actrc  .claudeignore  .coverage  .coveragerc  .cursorignore  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .promotion-rules.conf  .test-build-timestamp  .test-build.hash  .yamlfmt  .yamllint.yml  AGENTS.md  CLAUDE.md  DEBUG_GUIDE.md  Makefile  README.md  TODO.md  cli.py  cli.sh  constraints.txt  debug_test.py  docker-setup.sh  env_example.txt  gemini.md  graphql-test.http  ingest.sh  junit.xml  kri-local-rag.code-workspace  kri-local-rag.code-workspace-confuses_cursor  old-AGENTS.md  pyproject.toml  pyproject_pre-uv.toml  pyrightconfig.json  pytest.ini  renovate.json  requirements-dev.txt  (+6 more)
.claude/rules/: docker-safety.md  langchain.md  linting.md  logging.md  plan-hygiene.md  python-imports-and-deps.md  rule-authoring.md  testing.md
.codex/: config.toml  config.yaml
.cursor/: mcp.json  modes.json
.cursor/.cursor_future_rules/: stop-custom-agent.stops-too-fast
.cursor/rules/: archive-todo.mdc  challenge-user.mdc  cursor-rule-modification.mdc  error-handling.mdc  fixing-test.mdc  gemini-pro-agent.mdc  index.mdc  linting.mdc  local-vs-ci-tools.mdc  locate-docs.mdc  plan-agent-dont-execute.mdc  post-edit-build-test.mdc  problem-solving.mdc  python-imports-and-deps.mdc  python-packaging.mdc  stop-custom-agent.mdc  terminal_and_python.mdc  testing.mdc  uv-sandbox.mdc  version-control.mdc
.cursor_future_rules/: future_cursor_rules_not_used_yet
.devcontainer/: Dockerfile  devcontainer.json  install-linters.sh
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: README.md  auto-pr.yml  codeql.yml  codeql_local.yml  create-pr.yml  docker-integration-tests.yml  enable-automerge.yml  meta-linters.yml  python-lint-test.yml  security_scans.yml  semgrep.yml  semgrep.yml.formatted  semgrep_local.yml  test-pyright-local.yml  trivy_pip-audit.yml  wf_README.md
.pre-commit-cache/: db.db
.tools/: python
Continue_AI_coder/: config.yaml
backend/: __init__.py  _test_support.py  config.py  console.py  delete_collection.py  ingest.py  ingest_pdf.py  models.py  ollama_client.py  qa_loop.py  retriever.py  test_debug.py  test_logging.py  test_weaviate_debug.py  vector_utils.py  weaviate_client.py  windows_ip_in_wsl.py
dewpointApp/: beach_weather.py  dewpoint_CLI.py  dewpoint_app.py  dewpoint_weather.py  requirements.txt
docker/: .env.docker  CLI.Dockerfile  app.Dockerfile  app.test.Dockerfile  compose.test.yml  docker-compose.ci.yml  docker-compose.yml  frontend.Dockerfile  weaviate_auth.notused
docs/: DEBUG_GUIDE.md  DEVELOPMENT.md  PRE-COMMIT.md  REORGANIZATION_SUMMARY.md  ci-cd-release-management.md  cursor_hints.md  cursor_terminal_fix.md  docker-management.md  docker_test.md  document-processing.md  e2e_container.md  embedding_model_DEBUG.md  env_example.txt  pillow_dep_todo.md  release-management.md  semgrep_todo.md  testing.md  testing_strategy.md  weaviate_wrapper.md
docs/AI_coder/: AI_instructions.md  CODEX_RULES.md  archived-tasks.md  cursor_hints.md  instructions_plan.md  product_todo.md
docs/_archived/: NLTK_setup.md  archived-tasks.md  embedding-model-selection.md  embedding_model_DEBUG.md  weaviate_wrapper.md
docs/dev_test_CI/: DEVELOPMENT.md  README.md  TEST_NOTIFICATIONS.md  ci-cd-release-mgmt.md  testing_approach.md
docs/operate/: auto-merge.md  docker-management.md  embedding-model-selection.md  launch_prep_todo.md  models_guide.md  mvp_deployment.md
docs/plans/: 2026-06-23-cpu-gpu-variant-simplification-design.md  2026-06-23-langchain-1x-migration.md  2026-06-23-langchain-community-sunset-remediation.md  2026-06-23-python-3.14-upgrade.md  2026-06-24-complexity-hotspots-simplification.md  2026-06-24-test-env-fixed-project-name.md  architectural-simplification.md  complexity-cleanup.md  e2e_container.md  product_todo.md  security-remediation.md  stop_using_test_docker.md  test-suite-value-cleanup.md
docs_AI_coder/: AI_instructions.md  DEVELOPMENT.md  Migration_to_compose_only.md  Plan_no_Testcontainers.md  TEST_REFACTORING_SUMMARY.md  archived-tasks.md  instructions.md  launch_prep_todo.md  models_guide.md  mvp_deployment.md  preparation_todo.md  product_todo.md  progress.md  testing.md
docs_in_progress/: mvp_deployment.md
example_data/: test.md
frontend/: rag_app.py  requirements.txt
reports/: deptry_report.json  junit.xml  report.html
requirements/: base.in  base.txt  test.in  test.txt
scripts/: build_app.sh  build_app_if_missing.sh  check_integration_env.py  ci_act.sh  ci_local.sh  ci_local_fast.sh  clean_artifacts.sh  cleanup_docker_and_ci_cache.sh  cli.sh  common.sh  config.sh  docker-reset.sh  docker-setup.sh  download_nltk_data.py  ingest.sh  install-linters.sh  install-system-tools.sh  lint.sh  migrate-model-cache.sh  monitor_gpu.sh  pre-commit.sh  pre_push.sh  promote_dev_to_main.sh  pytest_with_cleanup.sh  select_variant.sh  semgrep_local.sh  setup-dev-env.sh  setup-pre-commit.sh  test.sh  test_e2e.sh  test_integration.sh  test_ui.sh  test_unit.sh  validate_ssot.py
scripts/ci/: cleanup_test_logs.sh  format_yaml.sh  install-system-tools.sh  promote_dev_to_main.sh
scripts/debug/: test_debug.py  test_weaviate_debug.py
scripts/dev/: monitor_gpu.sh  pushpr.sh  setup-dev-env.sh  setup-pre-commit.sh  test-env.sh  test-notification.sh  test.sh
scripts/docker/: build_app.sh  cleanup_docker_and_ci_cache.sh  docker-reset.sh  docker-setup.sh
scripts/git-hooks/: post-push  pre-commit  pre-push
scripts/setup/: download_model.py
scripts/shell/: cli.sh  docker-reset.sh  docker-setup.sh  ingest.sh
test_data/: test.md
tests/: README_integration.md  conftest.py  test_cli_script_integration.py  test_environment.py  test_hybrid_search_fix.py  test_ingest.py  test_ml_environment.py  test_qa_loop_resilience.py  test_startup_performance.py
tests/docker/: test_backend_import_in_container.py  test_frontend_requirements_in_container.py
tests/e2e/: conftest.py  fixtures_ingestion.py  test_cli_script_e2e.py  test_container_helper.py  (+4 more)
tools/uv_sandbox/: pyproject.toml  run.sh
(+83 files in other folders)
