[project]
name = "kri-local-rag"
version = "0.1.0"
description = "A local RAG implementation with Weaviate and Ollama."
authors = [{ name="Kristjan Sillmann"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "langchain>=0.3.30,<0.4.0",
    "langchain-community>=0.3.30,<0.4.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "rich>=14.1.0,<15.0.0",
    "sentence-transformers>=5.1.0,<6.0.0",
    "streamlit>=1.49.1,<2.0.0",
    # torch + torchvision moved to [project.optional-dependencies] (cpu / gpu extras).
    # See docs/plans/2026-06-23-gpu-cpu-torch-extras.md.
    "weaviate-client>=4.16.6,<5.0.0",
    "unstructured[pdf]>=0.18.18,<0.19.0",
    "numpy>=2.3.3,<3.0.0",
    "pymupdf>=1.24.10,<2.0.0",
]

[project.optional-dependencies]
# Mutually exclusive (see [tool.uv].conflicts). Wrappers (run_uv.sh, Makefile
# targets) always pass `--extra cpu` or `--extra gpu` based on the gitignored
# `.kri-variant.local` file (or the KRI_VARIANT env override). GPU is the default
# for local/bare-metal dev; CPU is the fallback for CI, act, and the Docker app
# image. WARNING: a bare `uv sync` with no extra does NOT skip torch — because
# sentence-transformers depends on torch unconditionally, uv falls back to the
# default PyPI torch wheel (CUDA-bundled on Linux, no index-pin / ABI guarantee).
# Always select a variant (run_uv.sh / make use-gpu|use-cpu / KRI_VARIANT).
# torchvision is index-pinned alongside torch to avoid the
# `operator torchvision::nms does not exist` ABI mismatch.
cpu = [
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<1.0.0",
]
gpu = [
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<1.0.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6,<2.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pyright[nodejs]>=1.1.405,<2.0.0",
    "ruff>=0.12.12,<0.13.0",
]

test = [
    "playwright>=1.55.0,<2.0.0",
    "protobuf>=6.32.0,<7.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=6.3.0,<7.0.0",
    "pytest-docker>=3.2.3,<4.0.0",
    "pytest-html>=4.1.1,<5.0.0",
    "pytest-mock>=3.15.0,<4.0.0",
    "pytest-playwright>=0.7.1,<0.8.0",
    "pytest-socket>=0.7.0,<0.8.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    # Optional runtime deps not yet used in app
    "pdfplumber>=0.11.7,<0.12.0",
    "pillow>=12.2.0,<13.0.0",
    "langdetect>=1.0.9,<2.0.0",
]
 

[tool.uv]
add-bounds = "major"

# cpu and gpu extras are mutually exclusive — uv resolves both into a single
# `uv.lock` with conflicting markers, so a sync with one extra never installs
# the other's torch/torchvision wheels.
conflicts = [
    [ { extra = "cpu" }, { extra = "gpu" } ],
]

# Minimum-safe-version constraints for transitive deps with open CVE advisories
# (Dependabot, 2026-06). Constraints pin a floor without making the package a
# direct dependency; see docs/plans/security-remediation.md Part A.
constraint-dependencies = [
    "authlib>=1.6.9",          # GHSA-wvwj-cvrp-7pv5 (JWS/JWK header injection)
    "nltk>=3.9.3",             # GHSA-7p94-766c-hgjp (Zip-Slip)
    "langchain-core>=0.3.81",  # GHSA-c67j-w6g6-q2cm (serialization injection)
    "urllib3>=2.7.0",          # GHSA-qccp-gfcp-xxvc
    "cryptography>=48.0.1",    # GHSA-537c-gmf6-5ccf
    "tornado>=6.5.6",          # 3 High advisories (Streamlit transitive)
    "aiohttp>=3.14.1",
    "pypdf>=6.13.3",
    "idna>=3.15",
    "gitpython>=3.1.50",
    "lxml>=6.1.0",
    "pyarrow>=23.0.1",
    "langsmith>=0.8.18",
    "pillow>=12.2.0",          # GHSA-pwv6-vv43-88gr (also bumped as direct dep)
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# `explicit = true` means nothing resolves from this index unless bound via
# [tool.uv.sources] below.
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# Bind torch + torchvision to the CPU index under the `cpu` extra and the cu128
# index under the `gpu` extra. Both must come from the same index per extra to
# keep their ABI in sync.
torch = [
    { index = "pytorch-cpu",    extra = "cpu" },
    { index = "pytorch-cu128",  extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu",    extra = "cpu" },
    { index = "pytorch-cu128",  extra = "gpu" },
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Limit package discovery to the Python code under `cli.py` and `backend/` to avoid
# setuptools attempting to package non-Python top-level folders like `docker/` or `logs/`.
[tool.setuptools]
py-modules = ["cli"]
packages = ["backend"]

[project.scripts]
kri-local-rag = "cli:main"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
# E203: whitespace-before-punctuation
# W503: line-break-before-binary-operator
# E401: multiple-imports-on-one-line
# E302: expected-2-blank-lines-found-1
# E305: expected-2-blank-lines-after-function-or-class
# E402: module-import-not-at-top-of-file
ignore = ["E203", "E401", "E302", "E305", "E402"]
select = ["E", "F", "W", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--cov=backend",
    "--cov=frontend",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--ignore=tests/unit/test_debug.py",
    "--ignore=tests/unit/test_logging.py",
    "--ignore=tests/unit/test_search_logic_archived.py",
    "--strict-markers",  # Ensure all markers are registered
]
markers = [
    "slow: Tests that take longer to run (>30s)",
    "docker: Tests requiring a running Docker daemon",
    "requires_weaviate: Tests that require Weaviate service",
    "requires_ollama: Tests that require Ollama service",
]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e",
]

# Unified logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
log_file = "reports/test_session.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.deptry]
# --- Where to read declared dependencies ------------------------------
# uv/pyproject-based; no requirements files needed (deptry reads [project])

# --- What to scan / skip ----------------------------------------------
# keep default excludes (.venv, .git, tests, etc.) and add a few more
extend_exclude           = ["docs", "dist", "build"]
ignore_notebooks         = true                       # faster on mixed repos

# --- Tell Deptry these folders are *first-party* code ------------------
known_first_party        = ["backend", "frontend", "scripts"]

# --- Handle edge-cases -------------------------------------------------
experimental_namespace_package = true                 # recognise PEP-420 pkgs
# Map weird wheels → import names (example)

# avoids false DEP003 in src-layout

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]
weaviate-client = ["weaviate"]  # if you ever install it optional-only
langchain-community = ["langchain_community"]


[tool.deptry.per_rule_ignores]
DEP004 = ["numpy"]                                   # optional runtime in vector_utils
DEP002 = [
    "boto3",                                       # AWS libs pulled in indirectly
    "langdetect",                                  # planned/optional language detection
    "pdfplumber", "pillow", "pymupdf", "unstructured",  # PDF backends for loaders
    "torchvision",                                 # index-pinned ABI peer of torch (not imported directly)
]


[tool.coverage.run]
# Limit measured source to backend package and suppress noisy warnings when
# xdist splits tests that don't execute any measured code in a worker.
source = ["backend"]
omit = ["tests/ui/*"]
disable_warnings = ["no-data-collected"]
data_file = "reports/coverage/.coverage"

# Service health check endpoints
[tool.integration.services]
weaviate = { health_endpoint = "/v1/.well-known/ready" }
ollama = { health_endpoint = "/api/version" }

# Timeout settings for service operations
[tool.integration.timeouts]
timeout_s = 1.0                    # seconds for service availability checks
service_check = 1.0               # seconds for service availability checks (legacy)
cache_duration = 5.0              # seconds to cache service availability
http_timeout = 2.0                # seconds for HTTP health checks
model_loading_timeout = 30.0      # seconds for model loading operations

# Environment descriptions (for documentation)
[tool.integration.environments]
docker = { description = "Running inside Docker containers with service URLs set via environment variables" }
local = { description = "Running on local machine with localhost URLs" }

# Commands to start/stop services in different environments
[tool.integration.commands]
docker_start = "make test-up"
docker_stop = "make test-down"
local_weaviate_start = "docker run -d -p 8080:8080 semitechnologies/weaviate:latest"
local_ollama_start = "ollama serve"
