[project]
name = "kri-local-rag"
version = "0.1.0"
description = "A local RAG implementation with Weaviate and Ollama."
authors = [{ name="Kristjan Sillmann"}]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "langchain-core>=1.2.22,<2.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "rich>=14.1.0,<16.0.0",
    # >=5.6.0: earlier 5.1.0 capped transformers<5.0.0, blocking the transformers 5.x
    # security bump; 5.2.0+ widened to transformers<6.0.0. See constraint-dependencies.
    "sentence-transformers>=5.6.0,<6.0.0",
    "streamlit>=1.49.1,<2.0.0",
    # torch + torchvision resolve from PyPI by default → GPU-capable, ABI-matched
    # wheels for local dev. The `cpu` extra re-pins both to the pytorch-cpu index
    # for slim CI/Docker installs. See docs/plans/archive/2026-06-23-cpu-gpu-variant-simplification-design.md.
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<1.0.0",
    "weaviate-client>=4.22.0,<5.0.0",
    "numpy>=2.3.3,<3.0.0",
    # PDFs parse via pypdf (BSD, pure-Python) — no AGPL pymupdf, no unstructured
    # ML/OCR stack. Born-digital text PDFs only (no OCR).
    "pypdf>=6.13.3,<7.0.0",
]

# Default (no extra) installs the PyPI torch wheel (CUDA on Linux) for local dev;
# pass `--extra cpu` (CI, Docker app image) for slim `+cpu` wheels from the
# pytorch-cpu index via [tool.uv.sources]. Both torch and torchvision come from
# the same source so their ABI stays matched (avoids `operator torchvision::nms
# does not exist`). The `gpu` extra below exists ONLY because uv requires every
# conflict set to have >=2 members — see the [tool.uv].conflicts note.
[project.optional-dependencies]
cpu = [
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<1.0.0",
]
# `gpu` carries no source binding → resolves from PyPI (CUDA wheels on Linux).
# It exists only to give the cpu extra a conflict partner (uv requires >=2
# members per conflict set); it is the default for local dev.
gpu = [
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.23.0,<1.0.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4,<2.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pyright[nodejs]>=1.1.410,<2.0.0",
    "ruff>=0.15.20,<0.16.0",
]

test = [
    "playwright>=1.61.0,<2.0.0",
    "protobuf>=6.32.0,<7.0.0",
    "pytest>=9.0.3,<10.0.0",  # CVE-2025-71176 (fixed in 9.0.3)
    "pytest-cov>=6.3.0,<8.0.0",
    "pytest-docker>=3.2.3,<4.0.0",
    "pytest-html>=4.1.1,<5.0.0",
    "pytest-mock>=3.15.0,<4.0.0",
    "pytest-playwright>=0.7.1,<0.9.0",
    "pytest-socket>=0.7.0,<0.9.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    # Optional runtime deps not yet used in app
    "pillow>=12.2.0,<13.0.0",
    "langdetect>=1.0.9,<2.0.0",
]
 

[tool.uv]
add-bounds = "major"

# Conflict pair isolating the `cpu` extra. Without it, uv applies the pytorch-cpu
# source binding (below) to the *base* resolution too, collapsing the default
# (no-extra) install to CPU wheels and losing GPU-by-default. The conflict scopes
# that index to `--extra cpu`; the no-extra / `--extra gpu` forks resolve torch
# from PyPI (CUDA on Linux). uv requires >=2 members per conflict set, so the
# otherwise-redundant `gpu` extra is the mandatory partner. See
# https://docs.astral.sh/uv/guides/integration/pytorch/ and
# docs/plans/archive/2026-06-23-cpu-gpu-variant-simplification-design.md.
conflicts = [
    [ { extra = "cpu" }, { extra = "gpu" } ],
]

# Minimum-safe-version constraints for transitive deps with open CVE advisories
# (Dependabot, 2026-06). Constraints pin a floor without making the package a
# direct dependency; see docs/plans/security-remediation.md Part A.
constraint-dependencies = [
    "authlib>=1.6.9",          # GHSA-wvwj-cvrp-7pv5 (JWS/JWK header injection)
    "nltk>=3.9.3",             # GHSA-7p94-766c-hgjp (Zip-Slip)
    # langchain-core: now a direct dep (>=1.2.22) — clears GHSA-c67j-w6g6-q2cm too.
    "urllib3>=2.7.0",          # GHSA-qccp-gfcp-xxvc
    "cryptography>=48.0.1",    # GHSA-537c-gmf6-5ccf
    "tornado>=6.5.6",          # 3 High advisories (Streamlit transitive)
    "aiohttp>=3.14.1",
    "idna>=3.15",
    "gitpython>=3.1.50",
    "lxml>=6.1.0",
    "pyarrow>=23.0.1",
    "langsmith>=0.8.18",
    "pillow>=12.2.0",          # GHSA-pwv6-vv43-88gr (also bumped as direct dep)
    # Second wave (Dependabot/pip-audit, advisories published after Phase A, 2026-06):
    "python-multipart>=0.0.31", # 6 CVEs incl CVE-2026-53540 (Streamlit transitive)
    "orjson>=3.11.6",           # PYSEC-2026-107
    "pyasn1>=0.6.3",            # CVE-2026-23490, CVE-2026-30922
    "pygments>=2.20.0",         # CVE-2026-4539 (rich transitive)
    "virtualenv>=20.36.1",      # CVE-2026-22702 (pre-commit transitive, dev group)
    # transformers (sentence-transformers transitive; we don't import it directly):
    # CVE-2026-1839 / GHSA-69w3-r845-3855 (Trainer RCE) is the only 4.56.1 advisory needing
    # 5.x — fixed in 5.0.0rc3, so >=5.0.0 stable is the minimum-safe boundary (all other
    # transformers advisories were fixed in 4.x). 5.x requires sentence-transformers >=5.2.0
    # (5.1.0 capped <5.0.0) — direct floor bumped to >=5.6.0 above. This floor forces the
    # transitive resolution onto the 5.x line so a future re-lock can't silently regress to
    # 4.x; uv resolves to the latest 5.x and CI `uv audit` gates the specific locked version.
    "transformers>=5.0.0,<6.0.0",
    # Third wave (uv audit / OSV, 2026-06): non-major fixes only.
    "fonttools>=4.60.2",       # GHSA-768j-98cg-p3fv (arbitrary file write / XML injection)
    "marshmallow>=3.26.2",     # GHSA-428g-f7cq-pgp5 (Schema.load DoS; stays on 3.x)
    "protobuf>=6.33.5",        # GHSA-7gcm-g887-7qv7 (JSON recursion bypass; Streamlit transitive)
    "requests>=2.33.0",        # GHSA-gc5v-m9x4-r6x2 (insecure temp-file reuse in extract_zipped_paths)
    # LangChain 1.x migration DONE 2026-06-23 (-community>=0.4 / -core>=1.2.22 /
    # -text-splitters>=1.1.2 as direct deps; the `langchain` umbrella is no longer a
    # direct dep — we import only from community/core/text_splitters). Cleared the 5
    # LangChain advisories. See docs/plans/archive/2026-06-23-langchain-1x-migration.md.
    # uv-audit/OSV findings with NO safe fix here (left flagged intentionally):
    #  - nltk 3.9.4 (GHSA-p4gq-832x-fm9v) and torch (GHSA-rrmf-rvhw-rf47): no fixed release upstream.
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# `explicit = true` means nothing resolves from this index unless bound via
# [tool.uv.sources] below.
explicit = true

[tool.uv.sources]
# Under the `cpu` extra, bind both torch and torchvision to the CPU index (same
# source keeps their ABI matched). Without the extra they resolve from PyPI.
torch       = [{ index = "pytorch-cpu", extra = "cpu" }]
torchvision = [{ index = "pytorch-cpu", extra = "cpu" }]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Limit package discovery to the Python code under `cli.py` and `backend/` to avoid
# setuptools attempting to package non-Python top-level folders like `docker/` or `logs/`.
[tool.setuptools]
py-modules = ["cli"]
packages = ["backend"]

[project.scripts]
kri-local-rag = "cli:main"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
# Pin the lint/format target one minor below requires-python (3.14) so ruff does
# NOT auto-adopt 3.14-only syntax (e.g. PEP 758 parenthesis-free `except A, B:`),
# which would be a SyntaxError under a rollback to the 3.13 floor and breaks the
# atomic single-revert guarantee of the 3.14 bump. Adopting 3.14 syntax is a
# separate task — see docs/plans/archive/2026-06-23-python-3.14-upgrade.md "Out of scope".
target-version = "py313"

[tool.ruff.lint]
# E203: whitespace-before-punctuation
# W503: line-break-before-binary-operator
# E401: multiple-imports-on-one-line
# E302: expected-2-blank-lines-found-1
# E305: expected-2-blank-lines-after-function-or-class
# E402: module-import-not-at-top-of-file
ignore = ["E203", "E401", "E302", "E305", "E402"]
select = ["E", "F", "W", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--cov=backend",
    "--cov=frontend",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--strict-markers",  # Ensure all markers are registered
]
markers = [
    "slow: Tests that take longer to run (>30s)",
    "docker: Tests requiring a running Docker daemon",
    "requires_weaviate: Tests that require Weaviate service",
    "requires_ollama: Tests that require Ollama service",
]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e",
]

# Unified logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
log_file = "reports/test_session.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"

# Warning policy. `always` keeps every warning in the terminal summary and the
# session log (see tests/conftest.py::pytest_warning_recorded). The `error::`
# entries escalate (Pending)DeprecationWarnings issued by *our* code so they fail
# the suite instead of silently rotting; third-party deprecations stay visible but
# non-fatal. Add targeted `ignore::...:<lib>` lines here if a library gets noisy.
filterwarnings = [
    "always",
    "error::DeprecationWarning:backend",
    "error::DeprecationWarning:frontend",
    "error::PendingDeprecationWarning:backend",
    "error::PendingDeprecationWarning:frontend",
]

[tool.deptry]
# --- Where to read declared dependencies ------------------------------
# uv/pyproject-based; no requirements files needed (deptry reads [project])

# --- What to scan / skip ----------------------------------------------
# keep default excludes (.venv, .git, tests, etc.) and add a few more
extend_exclude           = ["docs", "dist", "build"]
ignore_notebooks         = true                       # faster on mixed repos

# --- Tell Deptry these folders are *first-party* code ------------------
known_first_party        = ["backend", "frontend", "scripts"]

# --- Handle edge-cases -------------------------------------------------
experimental_namespace_package = true                 # recognise PEP-420 pkgs
# Map weird wheels → import names (example)

# avoids false DEP003 in src-layout

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]
weaviate-client = ["weaviate"]  # if you ever install it optional-only


[tool.deptry.per_rule_ignores]
DEP004 = ["numpy"]                                   # required runtime in vector_utils (to_float_list)
DEP002 = [
    "boto3",                                       # AWS libs pulled in indirectly
    "langdetect",                                  # planned/optional language detection
    "pillow",                                      # transitive (streamlit/langchain), not first-party-imported
    "torch",                                       # sentence-transformers backend + CPU/GPU wheel split (not imported directly by first-party code)
    "torchvision",                                 # ABI peer of torch (not imported directly by first-party code)
]


[tool.coverage.run]
# Limit measured source to backend package and suppress noisy warnings when
# xdist splits tests that don't execute any measured code in a worker.
source = ["backend"]
omit = ["tests/ui/*"]
disable_warnings = ["no-data-collected"]
data_file = "reports/coverage/.coverage"

# Service health check endpoints
[tool.integration.services]
weaviate = { health_endpoint = "/v1/.well-known/ready" }
ollama = { health_endpoint = "/api/version" }

# Timeout settings for service operations
[tool.integration.timeouts]
timeout_s = 1.0                    # seconds for service availability checks
service_check = 1.0               # seconds for service availability checks (legacy)
cache_duration = 5.0              # seconds to cache service availability
http_timeout = 2.0                # seconds for HTTP health checks
model_loading_timeout = 30.0      # seconds for model loading operations

# Environment descriptions (for documentation)
[tool.integration.environments]
docker = { description = "Running inside Docker containers with service URLs set via environment variables" }
local = { description = "Running on local machine with localhost URLs" }

# Commands to start/stop services in different environments
[tool.integration.commands]
docker_start = "make test-up"
docker_stop = "make test-down"
local_weaviate_start = "docker run -d -p 8080:8080 semitechnologies/weaviate:latest"
local_ollama_start = "ollama serve"
