[project]
name = "uv-sandbox"
version = "0.0.0"
description = "Temporary sandbox for dependency resolution via uv"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core ML stack (CPU only)
    "torch==2.7.1",
    # Embeddings
    "sentence-transformers==5.0.0",
    # Protobuf lane and gRPC (aligned for 5.x)
    "protobuf==5.29.5",
    "grpcio==1.63.0",
    "grpcio-status==1.63.0",
    "grpcio-health-checking==1.63.0",
    "grpcio-tools==1.63.0",
    # App deps to validate together in the sandbox
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "weaviate-client==4.16.6",
    "streamlit>=1.48.0",
    # Additional app/runtime dependencies from requirements.txt
    "python-dotenv",
    "unstructured[pdf]==0.14.8",
    "PyMuPDF>=1.24.10",
    "pdfplumber>=0.11.0",
    "langdetect",
    "markdown>=3.6",
    "pillow>=11.1.0",
    "httpx",
    "rich>=13,<14",
    # Extras from root pyproject: test
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-xdist>=3.0,<4.0",
    "pytest-mock>=3.0,<4.0",
    "pytest-docker>=3.0,<4.0",
    "pytest-html>=4.1,<5.0",
    "pytest-socket>=0.6.0,<1.0",
    "requests>=2.31,<3.0",
    # Extras from root pyproject: docs
    "mkdocs>=1.5.0,<2.0",
    # Extras from root pyproject: ui
    "pytest-playwright==0.4.4",
    "playwright>=1.45,<2.0",
    # Extras from root pyproject: dev
    "ruff==0.12.9",
    "pyright[nodejs]==1.1.403",
    "bandit[toml]==1.8.6",
]



[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
